--- a/note/05.开端-字符串处理.md
+++ b/note/05.开端-字符串处理.md
@@ -266,7 +266,6 @@ public int handle(String modeStr,String mainStr){
       return suffix;
   }
   ```
-
   ![](resource\12.BM6.jpg)
 
   斜线棕色表示k与j-i之间的字符相同
@@ -277,11 +276,9 @@ public int handle(String modeStr,String mainStr){
     ![](resource\12.BM8.jpg)
 
   - 如果好后缀子串的位置在模式串前缀匹配，那么移动到该子串的位置下
-
     ![](resource\12.BM9.jpg)
 
   - 如果都没有匹配到，则整个后移m位
-
     ![](E:\algorithm-data-structure\note\resource\12.BM11.jpg)
 
 ```java
@@ -336,7 +333,6 @@ public int handle2(String modeStr,String mainStr){
     return -1;
 }
 ```
-
 #### 性能分析
 
 内存消耗：需要额外消耗3个数组，bc数组大小和字符集有关，suffix和prefix和模式串大小m有关，如果字符集很大，且对内存消耗要求严格，由于好后缀和坏字符是独立的，可以只使用好后缀规则，避免内存的消耗，但是BM的效率会有所降低
@@ -484,10 +480,314 @@ public int handle(String modeStr,String mainStr){
 
 > 字典树，处理字符串匹配的数据结构，用于解决在一组字符串集合中快速查询某个字符串的问题
 
+如有6个字符串，how，hi，her，hello，so，see，如果多次查找某个字符串是否存在，依次拿要查找的字符串和这6个字符串依次比较，比较耗时，当然可以使用散列表，但是trie树也可以解决，而且还有其他特性
 
+Trie树利用字符串之间的公共前缀（因此是一个多叉树），将重复的前缀合并在一起，其中根节点不包含任何信息，每个节点包含字符串的一个字符信息，从根节点到红色节点就是一个字符串，红色节点可能不是叶子节点，只是表示有一个字符串的结尾这个节点上
 
+![](resource\13.trie1.jpg)
 
+构造过程：
 
+![](resource\13.trie3.jpg)
+![](resource\13.trie2.jpg)
 
+查询过程，从根节点开始，直到红色节点，那经历的路径就是匹配的串，如her，但是如果匹配he，没有到红色节点，就说明he是某些字符串的前缀
+
+![](resource\13.trie4.jpg)
+
+#### 经典实现
+
+主要分为2个操作：将字符串插入到trie树；在trie树种查询一个字符串
+
+采用经典存方式，利用散列表的思想，通过下标和字符映射数组，存储节点指针
+
+![](resource\13.trie5.jpg)
+
+假设字符串的集合是a-z，那么每一个节点设计一个数组，该数组长度是26，a对应的下标0，数组值对应下一个节点数组的引用，如果数组中的值是null，说明下一个节点不存在。
+
+```java
+public class TrieTree {
+	// 先定义根节点
+	private Node root = new Node('/');
+
+	public TrieTree insert(String str){
+		int m = str.length();
+		Node p = root;
+		for(int i=0;i<m;i++){
+			int index = str.charAt(i) - 'a';
+			// 表示下一个节点是空，需要创建该节点
+			if(p.children[index] == null){
+				Node n = new Node(str.charAt(i));
+				p.children[index] = n;
+			}
+			p = p.children[index];
+		}
+		p.isEndingChar = true;
+		return this;
+	}
+
+	public boolean find(String str){
+		Node p = root;
+		int m = str.length();
+		for(int i=0;i<m;i++){
+			int index = str.charAt(i) - 'a';
+			if(p.children[index] == null){
+				return false;
+			}
+			p = p.children[index];
+		}
+		// 从trie树root遍历m层得到的节点，如果isEndingChar=true,表示匹配到
+		// 否则表示str是前缀
+		return p.isEndingChar;
+	}
+	
+	class Node{
+		char data;
+		// 表示有个字符串在此处结尾
+		boolean isEndingChar = false;
+		// 存储下一个节点，下标是下一个字符的字母序号
+		Node[] children = new Node[26];
+		Node(char data){
+			this.data = data;
+		}
+	}
+}
+```
+
+#### 复杂度分析
+
+构建时间复杂度，构建trie树的时候，扫描所有字符串，时间复杂度是O(n)，n是所有字符串的长度和；查找复杂度是要遍历要查找字符串，时间复杂度是O(k)，k是查找字符串的长度
+
+但是trie树的空间复杂度很高，构建树之后，每一个节点都开辟26个数组的空间，是使用空间换时间的方式减少时间复杂度；如果字符串全集是a-z，26个字母，那么每个节点要存储长度26的数组，每个数组存储一个8字节的指针，那么就每个节点就至少需要26*8=208个字节，如果字符串的全集不是字母，而是汉子，数字等其他字符，那么就会消耗大量内存。
+
+优化：
+
+在空间复杂度上进行优化，将每个节点的数组转换为其他结构，有序数组，跳表，散列表，红黑树等；如果使用有序数组，将节点中的字符从大到小进行排列，查询时使用二分查找，但是在插入一个字符串的时候，需要维护数组的有序性，性能会有所降低。
+
+缩点优化，对**只有一个子节点**的节点，且此节点不是一个串的结束节点，可以将此节点和子节点进行合并
+
+![](resource\13.trie6.jpg)
+
+#### 应用
+
+trie的局限性：
+
+- 字符串包含的字符集不能太大，会占用存储空间太多
+- 要求字符串的前缀重合比较多，否则也会空间消耗比较大
+- 通过指针串联的数据块，不是连续的，对缓存不友好
+- 不适合精确查找（精确查找使用散列表和红黑树）适合查找前缀匹配的字符串
+
+特点：可以查找前缀匹配的字符串
+
+使用trie树实现关键词提示功能，我们假设关键词库由用户的热门搜索关键词组成。我们将这个词库构建成一个 Trie 树。当用户输入其中某个单词的时候，把这个词作为一个前缀子串在 Trie 树中匹配。为了讲解方便，我们假设词库里只有 hello、her、hi、how、so、see 这 6 个关键词。当用户输入了字母 h 的时候，我们就把以 h 为前缀的 hello、her、hi、how 展示在搜索提示框内。当用户继续键入字母 e 的时候，我们就把以 he 为前缀的 hello、her 展示在搜索提示框内。这就是搜索关键词提示的最基本的算法原理。
+
+![](resource\13.trie7.jpg)
+还可以实现自动输入补全等。
 
 ### AC自动机
+
+> 多模式串匹配算法，Aho-Corasick automaton 
+>
+> 基于Trie树和KMP
+
+单模式串匹配：一个模式串一个主串之间匹配 ，算法有：BM RK BM KMP 
+多模式串匹配：多个模式串一个主串之间匹配，算法有：Trie，AC
+
+虽然多模式串匹配可以用单模式匹配实现，但是如果主串长度有n，而模式串（长度m）的个数是k，每单模式匹配需要遍历主串，用KMP算法的时间复杂度为O(k*(m+n)),如果用多模式匹配进行，扫描一次主串，在主串中一次性查找多个模式串是否存在，时间复杂度会降低很多
+
+#### 基本思想
+
+简单实现多模式串匹配：类似于BF算法，可以实现一个简单多模式串匹配算法，将模式串集合构建成Trie树，预处理只需要做一次，如果模式串集合更新了，动态更新一下Trie树，然后依次遍历主串字符，取出主串字符放入Trie树种进行匹配，匹配到了则标记，没有匹配到则下移一个字符，继续匹配。
+
+AC自动机使用了KMP算法中的next数组机制，AC算法实现比较简单多模式串匹配类似于单模式串匹配中KMP与BF之间的关系。
+
+#### 实现
+
+##### 失效指针
+
+AC算法是建立Trie树和KMP算法基础上的，AC自动机的构建包含：
+
+- 将多个模式串构建成Trie树
+
+- 在Trie树上添加**失效指针**（相当于KMP中失效函数next数组）
+
+  假设4个模式串：c，bc，bcd，abcd；主串是abcd
+
+  ![](resource\14.ac1.jpg)
+
+  计算失效指针：失效指针是当前模式串与其他模式串匹配的最长后缀匹配子串，得到该子串的节点指向匹配的模式串最后字符的节点。
+
+  如abc的子串有bc，c；bc和c都可以匹配到对应的模式串（可匹配后缀子串），但是子串bc是最长的，那么bc子串的失效节点就指向bc模式串的c节点。
+
+  ![](resource\14.ac2.jpg)
+
+  将树中深度相同节点放在同一层，那么某个节点的失败指针只能是它所在层的上一层节点中。类似于KMP，当计算某个节点的失效指针的时候，可以依次查询前一层的失效节点来推导
+
+  示例：已经得到p节点的失效指针，得到p的子节点的失效指针
+
+  ![](resource\14.ac3.jpg)
+
+  得到p节点的失效指针q之后，对应pc的节点指针从q的下一层寻找，如果qc的值和pc的值相同，那么pc就指向qc。如果p的下一个节点和qc不相同，则q=q->fail，从q的失效指针节点继续寻找。（类似于next数组中的j=next[j]的过程）
+
+  ![](resource\14.ac4.jpg)
+
+  如果还没有找到失效指针节点，那么就指向root。那么最终结果如下
+
+  ![](resource\14.ac5.jpg)
+
+具体实现如下：
+
+```java
+private Node root = new Node('/');
+
+public AC generateTrie(String[] modeStrs){
+    for (String modeStr : modeStrs) {
+        insertTrieNode(modeStr);
+    }
+    buildFailuerPointer();
+    return this;
+}
+
+private void insertTrieNode(String modeStr){
+    int m = modeStr.length();
+    Node p = root;
+    for(int i=0;i<m;i++){
+        int index = modeStr.charAt(i) - 'a';
+        if(p.children[index] == null){
+            Node n = new Node(modeStr.charAt(i));
+            p.children[index] = n;
+        }
+        p = p.children[index];
+    }
+    p.isEndingChar = true;
+    p.length = m;
+}
+
+/**
+	 * 构建失效指针
+	 */
+private void buildFailuerPointer(){
+    Queue<Node> queue = new LinkedList<>();
+    // 根的失效指针需要设置为null
+    root.fail = null;
+    queue.add(root);
+    while(!queue.isEmpty()){
+        // 获取头部元素
+        Node parent = queue.poll();
+        int size = parent.children.length;
+        for(int i=0;i<size;i++){
+            Node current = parent.children[i];
+            if(current == null){
+                continue;
+            }
+            // 父节点是root，那么就没有pc上一层节点可以查找失效指针
+            if(parent == root){
+                current.fail = root;
+            }else{
+                // 获取父层的失效指针，尝试在父层中是否有子串的匹配
+                // 这样在遍历单个串时，如果到该子节点不匹配，尝试在失效指针，父级从其他子串路径去判断
+                // 避免重复遍历
+                Node branchParent = parent.fail;
+                while(branchParent!=null){
+                    // 分支节点和当前节点相同，即不为null，说明相同，则失效指针指向该分支节点
+                    Node branchNode = branchParent.children[current.data - 'a'];
+                    if(branchNode != null){
+                        current.fail = branchNode;
+                        break;
+                    }
+                    // 如果该分支节点没有找到，则再去其他分支节点查找
+                    // 如果一直没有找到，那么最终branchParent是root,而root的fail是null
+                    // 这句是重点，类似于kmp中的j=next[j]
+                    branchParent = branchParent.fail;
+                }
+                // 此时fail为null，说明已经迭代到了root节点
+                if(branchParent == null){
+                    current.fail = root;
+                }
+            }
+            queue.add(current);
+        }
+    }
+}
+
+class Node{
+    char data;
+    /**
+		 * 字符集包含26个字母
+		 */
+    Node[] children = new Node[26];
+    /**
+		 * 表示模式串的最后一个节点
+		 */
+    boolean isEndingChar=false;
+    /**
+		 * 当isEndingChar = true,记录长度，用于主串移动使用
+		 */
+    int length = -1;
+    /**
+		 * 失效指针
+		 */
+    Node fail = null;
+
+    Node(char data){
+        this.data = data;
+    }
+}
+```
+
+##### 匹配主串
+
+主串从0开始匹配，AC自动机从root开始匹配
+
+```java
+public void handle(String mainStr){
+    // 执行之前需要生成trie树
+    int n = mainStr.length();
+    Node parent = root;
+    for(int i=0;i<n;i++){
+        int index = mainStr.charAt(i) - 'a';
+        // 判断节点对应的位置，在非root下找到合适的分支模式串起始节点
+        while(parent != root){
+            // 如果匹配到则出循环
+            if(parent.children[index] != null){
+                break;
+            }
+            // 没有匹配到，则去其他分支获取看是否可以匹配到
+            parent = parent.fail;
+        }
+        Node current = parent.children[index];
+        if(current == null){
+            parent = root;
+            continue;
+        }
+        // 记录当前移动的点，用于下次循环的起始查找点
+        parent = current;
+        // 找到对应的点，判断是否是最后节点
+        while(current != root){
+            if(current.isEndingChar){
+                // 输出匹配项目
+                int pos = i-current.length+1;
+                System.out.println("匹配起始下标："+pos+" 长度："+current.length);
+            }
+            // 查询相同值的其他节点，判断是否是最后一个
+            current = current.fail;
+        }
+    }
+}
+```
+
+#### 复杂度分析
+
+构建AC自动机：构建Trie树的时间复杂度是O(m*len)，这里len是模式串集合的平均长度，m是模式串个数
+
+构建失效指针：假设Trie树的节点个数是k，而每个节点构建失效指针的时候，耗时的是while中的q=q.fail，每执行一次，q指向的节点的深度-1，树的高度不会超过len，那么时间复杂度是O(k*len)
+
+AC自动机匹配：for循环内部的while最耗时，而while的时间复杂度是O(len)，那么匹配的时间复杂度是O(n*len)
+
+模式串中的长度一般不是很长，可以看做常数，那么最终的时间复杂度就是O(n)，一般由于失效指针都是指向root，时间复杂度是好于O(n)，只有到特殊情况会退化到Trie树的时间复杂度
+
+![](resource\14.ac6.jpg)
+
+#### 应用
+
+敏感词过滤系统
