--- a/note/02.开端-查找-散列表.md
+++ b/note/02.开端-查找-散列表.md
@@ -49,7 +49,7 @@ https://visualgo.net
 
 ![6.查找03](resource\6.查找03.jpg)
 
-假设数据大小是 n，每次查找后数据都会缩小为原来的一半，也就是会除以 2。最坏情况下，直到查找区间被缩小为空，才停止。k值就是缩小的次数，每次缩小都要进行比较操作，那么时间复杂度就是O(k)，而n/2<sup>k</sup> = 1,那么k为log<sub>2</sub>n ,则时间复杂度是O(logn)。查找很快，2的32次方的数量是42亿调数据，最多查询32次可以得到
+假设数据大小是 n，每次查找后数据都会缩小为原来的一半，也就是会除以 2。最坏情况下，直到查找区间被缩小为空，才停止。k值就是缩小的次数，每次缩小都要进行比较操作，那么时间复杂度就是O(k)，而n/2<sup>k</sup> = 1,那么k为log<sub>2</sub>n ,则时间复杂度是O(logn)。查找很快，2的32次方的数量是42亿的数据，最多查询32次可以得到
 
 > 二分查找简单实现：有序数组，没有重复元素
 
