--- a/note/06.开端-算法基本思想.md
+++ b/note/06.开端-算法基本思想.md
@@ -231,40 +231,125 @@ public void printResult(int[] re){
 
 
 
+#### 0-1背包问题
 
+> 0  表示不放入背包中
+> 1  表示放入背包中
 
+关于背包问题，如果物品可以分割使用贪心算法，如果不可以分割就是0-1背包问题，使用动态规划或者回溯算法。背包承载的总重是wkg，n个物品，每个物品重量不等，不可分割，选择不同的物品，得到总重量最大。
 
+对于每个物品而言，只有装进去和没有装进去2种情况，那么n个物品就有2^n情况，除去总重超过wkg的，剩下的找到最大重量的情况。
 
+使用回溯方法，分为n种情况，每次放入判断是否超过wkg，没有超过继续，超过则输出放入情况和放入的总大小。
 
+```java
+public class Backpack {
+    // 存储最大的重量
+    private int maxWeight = 0;
+    // 输出结果的重量
+    private int resultWeight = 0;
+    // 输出放入背包的情况
+    private Map<Integer,List<String>> re = new HashMap<>();
+    Backpack(int maxWeight){
+        this.maxWeight = maxWeight;
+    }
+    /**
+	 * 开始往背包里面放置东西
+	 * @param items
+	 */
+    public void putInto(int[] items){
+        put(0,0,items,"");
+        System.out.println("weight:"+resultWeight);
+        System.out.println(re.get(resultWeight).toString());
+    }
 
+    /**
+	 * @param curIndex 当前items的索引
+	 * @param curWeight 当前重量
+	 * @param items 要放入的物品的全集
+	 * @param indexChain 物品选择的下标
+	 */
+    public void put(int curIndex,int curWeight,int[] items,String indexChain){
+        // 终止条件：到达个数限制或者重量限制
+        if(curIndex == items.length || curWeight == maxWeight){
+            // 记录最优解，这里使用>=可以记录最优解的集合
+            if(curWeight >= resultWeight){
+                resultWeight = curWeight;
+                if(!re.containsKey(resultWeight)){
+                    re.put(resultWeight,new ArrayList<>());
+                }
+                re.get(resultWeight).add(indexChain);
+            }
+            return;
+        }
+        int nextIndex = curIndex + 1;
 
+        // 关键点：该curIndex物品放入背包中只有2种情况，放入和不放入
+        // 情况1：本curIndex时的物品不放入
+        put(nextIndex,curWeight,items,indexChain);
 
+        // 情况2：在本curIndex物品不累加不超过背包大小时，放入
+        int newWeight = curWeight + items[curIndex];
+        if(newWeight <= maxWeight){
+            put(nextIndex,newWeight,items,indexChain+"-"+curIndex);
+        }
+    }
+}
+```
 
+### 动态规划 Dynamic Programming
 
+> 适合求解最优问题，求最大值，最小值等，显著的降低时间复杂度，提高代码效率
 
+#### 0-1背包问题
 
+使用动态规划解决背包问题，之前使用回溯算法解决，但是回溯的复杂度比较高，是指数级别的。
 
+回溯方式：
 
+```java
+// 回溯算法实现。注意：我把输入的变量都定义成了成员变量。
+private int maxW = Integer.MIN_VALUE; // 结果放到 maxW 中
+private int[] weight = {2，2，4，6，3};  // 物品重量
+private int n = 5; // 物品个数
+private int w = 9; // 背包承受的最大重量
+public void f(int i, int cw) { // 调用 f(0, 0)
+  if (cw == w || i == n) { // cw==w 表示装满了，i==n 表示物品都考察完了
+    if (cw > maxW) maxW = cw;
+    return;
+  }
+  f(i+1, cw); // 选择不装第 i 个物品
+  if (cw + weight[i] <= w) {
+    f(i+1,cw + weight[i]); // 选择装第 i 个物品
+  }
+}
+```
 
+图解如下
 
+![](resource\17.backtrack2.jpg)
 
+递归树中每个节点表示一种状态，用(i,cw)表示，i表示要决策第几个物品是否放入背包中，cw表示当前背包的重量。使用递归的方式会有重复计算的问题，可以将已经计算的存储下来(备忘录)，等再次计算时取出，减少重复计算
 
+```java
+private int maxW = Integer.MIN_VALUE; // 结果放到 maxW 中
+private int[] weight = {2，2，4，6，3};  // 物品重量
+private int n = 5; // 物品个数
+private int w = 9; // 背包承受的最大重量
+private boolean[][] mem = new boolean[5][10]; // 备忘录，默认值 false
+public void f(int i, int cw) { // 调用 f(0, 0)
+  if (cw == w || i == n) { // cw==w 表示装满了，i==n 表示物品都考察完了
+    if (cw > maxW) maxW = cw;
+    return;
+  }
+  if (mem[i][cw]) return; // 重复状态
+  mem[i][cw] = true; // 记录 (i, cw) 这个状态
+  f(i+1, cw); // 选择不装第 i 个物品
+  if (cw + weight[i] <= w) {
+    f(i+1,cw + weight[i]); // 选择装第 i 个物品
+  }
+}
+```
 
+此时计算的效率而言，和动态规划差不多了。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-### 动态规划
