--- a/note/06.开端-基础算法.md
+++ b/note/06.开端-基础算法.md
@@ -1,4 +1,4 @@
-## 算法基本思想
+## 基础算法
 
 ### 贪心算法 Greedy
 
@@ -297,6 +297,8 @@ public class Backpack {
 }
 ```
 
+
+
 ### 动态规划 Dynamic Programming
 
 > 适合求解最优问题，求最大值，最小值等，显著的降低时间复杂度，提高代码效率
@@ -305,7 +307,7 @@ public class Backpack {
 
 使用动态规划解决背包问题，之前使用回溯算法解决，但是回溯的复杂度比较高，是指数级别的。
 
-回溯方式：
+##### 回溯方式分析
 
 ```java
 // 回溯算法实现。注意：我把输入的变量都定义成了成员变量。
@@ -352,4 +354,161 @@ public void f(int i, int cw) { // 调用 f(0, 0)
 ```
 
 此时计算的效率而言，和动态规划差不多了。
+
+##### 动态规划方式分析
+
+将整个过程划分为n个阶段，每个阶段决定一个物品是否放在背包中（0和1），背包的重量会有多种情况，对应到递归树就是多个节点，将每一层重复状态节点进行合并，只记录不同的状态，**基于上一层**的状态集合推导下一层的状态的集合，保证每层不同状态的个数都不会超过w个，避免每层状态指数级别增长。
+
+使用`states[n][w+1]`记录每层的不同状态，w表示重量，n表示物品个数，值是0或者1，1表示可以放入背包，如果`status[0][0]=1`表示{2，2，4，6，3}中的第一个2不放入背包的时候，背包的重量是0，如果第一个2放入背包，那么`status[0][2]=1`,其他情况都是0，每一行，都要判断是否有背包重量w的可能性，如果是1表示该重量组合满足。每次判断都要连带上几次的可能性的集合。
+
+![](resource\18.dynamic1.jpg)
+![](resource\18.dynamic2.jpg)
+
+实现
+
+```java
+public class Backpack {
+	private int maxWeight = 0;
+	Backpack(int maxWeight){
+		this.maxWeight = maxWeight;
+	}
+	/**
+	 * @param items 要放入的物品的重量
+	 * @return 返回最大背包可以装载的数目
+	 */
+	public int handle(int[] items){
+		int count = items.length;
+		// 动态规划矩阵
+		// y 轴 items的个数
+		// x 轴 背包最大个数 + 1
+		boolean[][] states = new boolean[count][maxWeight+1];
+		// 表示第一个没有放入
+		states[0][0] = true;
+		// 这里的前提是items[0] 不大于maxWeight
+		// 表示第一个放入
+		states[0][items[0]] = true;
+		// 遍历每一行
+		for(int i=1;i<count;i++){
+			// 不把第i个物品放入背包,记录i-1个物品在i层的情况的集合
+			for(int j=0;j<=maxWeight;j++){
+				if(states[i-1][j]){
+					states[i][j] = states[i-1][j];
+				}
+			}
+			// 将i层的物品与所有i层的情况集合相加，符合maxWeight的放入
+			for(int j=0;j<=maxWeight - items[i];j++){
+				// 上一层是true
+				if(states[i-1][j]){
+					// 将本层物品i放入
+					states[i][items[i]+j] = true;
+				}
+			}
+		}
+		// 输出结果
+		for(int i=maxWeight;i >=0;i--){
+			if(states[count-1][i]){
+				return i;
+			}
+		}
+		return 0;
+	}
+}
+```
+
+##### 复杂度分析
+
+回溯算法的复杂度是O(2^n)，动态规划是2层for循环，所以时间复杂度是O(n*w)，n表示物品的个数，w表示背包最大重量。动态规划比回溯算法时间复杂度要低，但是由于动态规划需要额外的空间，需要一个n乘w+1的数组。
+
+关于优化，将动态规划的数组转换，降低消耗
+
+```java
+public int handle2(int[] items){
+    int count = items.length;
+    // 默认值是false
+    boolean[] states = new boolean[maxWeight+1];
+    states[0] = true;
+    states[items[0]] = true;
+    for(int i=1;i<count;i++){
+        // 注意：这里是j是从大到小
+        // 从小到大的话，后面满足情况会设置为true，造成重复计算
+        for(int j=maxWeight-items[i];j>=0;j--){
+            if(states[j]){
+                states[j+items[i]] = true;
+            }
+        }
+    }
+    for(int i=maxWeight;i>=0;i++){
+        if(states[i]){
+            return i;
+        }
+    }
+    return 0;
+}
+```
+
+##### 背包问题升级
+
+原先的背包只有重量weight这一个计量，现在再添加一个价值value计量，那么背包的总价值最大是多少
+
+使用回溯方式：
+
+```java
+private int maxV = Integer.MIN_VALUE; // 结果放到 maxV 中
+private int[] items = {2，2，4，6，3};  // 物品的重量
+private int[] value = {3，4，8，9，6}; // 物品的价值
+private int n = 5; // 物品个数
+private int w = 9; // 背包承受的最大重量
+public void f(int i, int cw, int cv) { // 调用 f(0, 0, 0)
+  if (cw == w || i == n) { // cw==w 表示装满了，i==n 表示物品都考察完了
+    if (cv > maxV) maxV = cv;
+    return;
+  }
+  f(i+1, cw, cv); // 选择不装第 i 个物品
+  if (cw + weight[i] <= w) {
+    f(i+1,cw+weight[i], cv+value[i]); // 选择装第 i 个物品
+  }
+}
+```
+
+![](resource\18.dynamic3.jpg)
+
+针对上面的代码，我们还是照例画出递归树。在递归树中，每个节点表示一个状态。现在我们需要 3 个变量（i, cw, cv）来表示一个状态。其中，i 表示即将要决策第 i 个物品是否装入背包，cw 表示当前背包中物品的总重量，cv 表示当前背包中物品的总价值。
+
+使用动态规划，只要将原先的boolean类型转换为int类型，并存储的是当前最大的value
+
+```java
+public static int knapsack3(int[] weight, int[] value, int n, int w) {
+  int[][] states = new int[n][w+1];
+  for (int i = 0; i < n; ++i) { // 初始化 states
+    for (int j = 0; j < w+1; ++j) {
+      states[i][j] = -1;
+    }
+  }
+  states[0][0] = 0;
+  states[0][weight[0]] = value[0];
+  for (int i = 1; i < n; ++i) { // 动态规划，状态转移
+    for (int j = 0; j <= w; ++j) { // 不选择第 i 个物品
+      if (states[i-1][j] >= 0) states[i][j] = states[i-1][j];
+    }
+    for (int j = 0; j <= w-weight[i]; ++j) { // 选择第 i 个物品
+      if (states[i-1][j] >= 0) {
+        int v = states[i-1][j] + value[i];
+        if (v > states[i][j+weight[i]]) {
+          states[i][j+weight[i]] = v;
+        }
+      }
+    }
+  }
+  // 找出最大值
+  int maxvalue = -1;
+  for (int j = 0; j <= w; ++j) {
+    if (states[n-1][j] > maxvalue) maxvalue = states[n-1][j];
+  }
+  return maxvalue;
+}
+```
+
+
+
+#### 一个模型
 
